h1 align fix for grading, form padding, form-buttons alignment...

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -558,7 +558,3 @@ input:focus, textarea#comment-area:focus, textarea:focus, input.form-control.sea
 .addarticle-form-row  form{
     padding-right: 40px;
 }
-
-.addarticle-form-group-btns {
-
-}
